[package]
name = "pointless-os"
version = "0.1.0"
edition = "2021"
authors = ["Utkarsh Srivastava <utkarsh@sagacious.dev>"]
license = "Apache 2.0"
description = "A pointless operating system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"